[package]
name = "lps22df-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.85.1"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["embedded", "no-std"]
keywords = ["st", "mems", "barometer", "pressure", "low-power"]
repository = "https://github.com/STMicroelectronics/lps22df-rs"
description = """
    Platform-agnostic driver for the LPS22DF ultracompact digital barometer and absolute pressure
    sensor with I2C, SPI interfaces.
"""

[dependencies]
embedded-hal = "1.0.0"
bitfield-struct = "0.10.0"
st-mems-bus = "1.0.1"
derive_more = { version = "2.0.1", default-features = false, features = ["try_from"] }
st-mem-bank-macro = "1.0.0"

# By default the bit order is assumed as Least Significant Bit.
[features]
bit_order_msb = []
